# linux-gamepad-tester

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LinuxGamepadTester  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: InputHandler.h.C8241E1B1295A508.idx  Main.c.EBD2CFDD1196A4C6.idx
src/: InputHandler.h  Main.c
